--- a/eslint.config
+++ b/eslint.config
@@ -2,8 +2,10 @@
   "parserOptions": { "ecmaVersion": 6 },
   "extends": "airbnb-base",
     rules: {
+			"indent": ["error", 2],
       'no-shadow': 0,
       'no-param-reassign': 0,
       'eol-last': 0,
   }
 }
+
