--- a/eslint.config
+++ b/eslint.config
@@ -2,7 +2,7 @@
   "parserOptions": { "ecmaVersion": 6 },
   "extends": "airbnb-base",
     rules: {
-    'order/properties-alphabetical-order': null,
+    "indent": ["error", "tab"] 
     'no-shadow': 0,
     'no-param-reassign': 0,
     'eol-last': 0,
