linter issue with order style property5

--- a/eslint.config
+++ b/eslint.config
@@ -2,7 +2,8 @@
   "parserOptions": { "ecmaVersion": 6 },
   "extends": "airbnb-base",
     rules: {
-      'order/properties-alphabetical-order': null,
+      "order-alphabetical": false,
+      "box-sizing": false,
 			"indent": ["error", tab],
       'no-shadow': 0,
       'no-param-reassign': 0,
